# liujdg

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  configure  deamon.json  liujdg.install.cxx  liujdg.run.cxx  liujdg_version.hpp.in  mbuild.sh  wconfigure.bat
doc/: README.md
doc/deamon/: README.md
doc/run/: README.md
examples/: README.md
examples/bad_build_sample/: README.md  config.json
examples/bad_build_sample/judger/: judger.cpp
examples/bad_build_sample/p1/: p1.cpp
examples/bad_runtime/: README.md  clean.sh
examples/bad_runtime/judger/: judger  judger.cpp
examples/bad_runtime/judger/data/: fk.txt
examples/bad_runtime/log/: 0.txt  judger_log.txt  liujdg_run_log.txt
examples/bad_runtime/p1/: p1  p1.cpp
examples/bad_runtime/p2/: p2.cpp
examples/gomoku/: README.md  build.sh
examples/gomoku/judger/: judger  judger.cpp
examples/gomoku/log/: 0.txt  1.txt  2.txt  judger_log.txt
examples/gomoku/p1/: p1  p1.cpp
examples/gomoku/p2/: p2
examples/gomoku/sample-log/: 0.txt  1.txt  2.txt  judger_log.txt  result.json
examples/sample1/: README.md  config.json
examples/sample1-python/: README.md  build.sh  clean.sh  config.json
examples/sample1-python/judger/: judger.py
examples/sample1-python/p1/: p1.cpp
examples/sample1-python/sample-log/: 0.txt  result.json
examples/sample1-python3/: README.md  build.sh  clean.sh  config.json
examples/sample1-python3/judger/: judger.py
examples/sample1-python3/judger/data/: fk.txt
examples/sample1-python3/log/: 0.txt  1.txt  2.txt  judger_log.txt  result.json
examples/sample1-python3/p1/: p1.py
examples/sample1-python3/sample-log/: 1.txt  2.txt
examples/sample1/judger/: judger.cpp
examples/sample1/sample-log/: 0.txt  2.txt  judger_log.txt  result.json
examples/ticTacToe/: README.md  clean.sh  config.json
examples/ticTacToe/judger/: judger.cpp
examples/ticTacToe/judger/data/: fk.txt
examples/ticTacToe/log/: 0.txt  1.txt  2.txt  judger_log.txt  result.json
examples/ticTacToe/p1/: p1
examples/ticTacToe/p2/: p2
examples/ticTacToe/sample-log/: 0.txt  1.txt  2.txt  judger_log.txt
include/: LGame.hpp  LGameInfo.hpp  LGameResult.hpp  LPerson.hpp  LPlayerResult.hpp  LProcess.hpp  LProcess_container.hpp  LProcess_sandboxed_c.hpp  Lfunc.hpp  Ljdgconfig.hpp
scripts/: copyDlls.sh  msys_build.sh  msys_configure.sh
src/libliujdg/: CMakeLists.txt  LGame.cxx  LGameInfo.cxx  LGameResult.cxx  LPerson.cxx  LPlayerResult.cxx  LProcess.cxx  LProcess_container.cxx  LProcess_sandboxed_c.cxx  Lfunc.cxx  Ljdgconfig.cxx
tools/: CMakeLists.txt  README.md  liujdg.build.cxx  liujdg.deamon.cxx  liujdg.run.cxx  liujdg.test.cxx  liujdg.true.cxx  liujdg.uninstall.sh
tools/deamon/: CMakeLists.txt  Lapi.hpp  Lbase.cxx  Lget.cxx  LgetResult.cxx  Lnew.cxx  Ltest.cxx  Lversion.cxx  all_apis.hpp  api_types.hpp  executor.cxx  generate.py  serve.cxx  types.cxx  utils.cxx
